@@ -41,17 +41,17 @@ module Netzke
             }
           END_OF_JAVASCRIPT
           
-          :on_widget_load => <<-END_OF_JAVASCRIPT.l
-            function(){
-              // immediately instantiate the active panel
-              var activePanel = this.findById(this.id + "_active");
-              
-              var activeItemConfig = this.initialConfig[this.initialConfig.expandedItem+"Config"];
-              if (activeItemConfig) {
-                activePanel.add(new Ext.netzke.cache[activeItemConfig.widgetClassName](activeItemConfig));
-              }
-            }
-          END_OF_JAVASCRIPT
+          # :on_widget_load => <<-END_OF_JAVASCRIPT.l
+          #   function(){
+          #     // immediately instantiate the active panel
+          #     var activePanel = this.findById(this.id + "_active");
+          #     
+          #     var activeItemConfig = this.initialConfig[this.initialConfig.expandedItem+"Config"];
+          #     if (activeItemConfig) {
+          #       activePanel.add(new Ext.netzke.cache[activeItemConfig.widgetClassName](activeItemConfig));
+          #     }
+          #   }
+          # END_OF_JAVASCRIPT
         }
       end
     end
